platform/openobserve/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openobserve
  labels:
    pod-security.kubernetes.io/enforce: restricted
    gateway.0xc0.cc/internal: "true"
